// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 1: Default Baseline 1`] = `
{
  "finalNetWorth": 780044.822926239,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3.959999999999127,
      "mortgageBalance": 0,
      "netWorth": 12496.04,
      "portfolio": 12496.04,
      "retirementReadyTarget": 0,
      "savings": 7496.040000000002,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 745651.6240337911,
      "portfolio": 745651.6240337911,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 86916.2532360885,
      "fiNumber": 627856.6774911447,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 703119.1422470943,
      "portfolio": 703119.1422470943,
      "retirementReadyTarget": 627856.6774911447,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 61801.986136442705,
      "taxes": 0,
      "withdrawals": 25114.26709964579,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1068883.9654811644,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 780044.822926239,
      "portfolio": 780044.822926239,
      "retirementReadyTarget": 1068883.9654811644,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42755.358619246574,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 63,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 2: Retire Today 1`] = `
{
  "finalNetWorth": 780044.822926239,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3.959999999999127,
      "mortgageBalance": 0,
      "netWorth": 12496.04,
      "portfolio": 12496.04,
      "retirementReadyTarget": 0,
      "savings": 7496.040000000002,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 745651.6240337911,
      "portfolio": 745651.6240337911,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 86916.2532360885,
      "fiNumber": 627856.6774911447,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 703119.1422470943,
      "portfolio": 703119.1422470943,
      "retirementReadyTarget": 627856.6774911447,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 61801.986136442705,
      "taxes": 0,
      "withdrawals": 25114.26709964579,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1068883.9654811644,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 780044.822926239,
      "portfolio": 780044.822926239,
      "retirementReadyTarget": 1068883.9654811644,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42755.358619246574,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 63,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 3: Social Security Enabled 1`] = `
{
  "finalNetWorth": 529635.0918008642,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3.959999999999127,
      "mortgageBalance": 0,
      "netWorth": 12496.04,
      "portfolio": 12496.04,
      "retirementReadyTarget": 0,
      "savings": 7496.040000000002,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "62": {
      "age": 62,
      "childCosts": 0,
      "coastFireNumber": 2105402.913927213,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 94413.66789275399,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 148382.19442364678,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 706486.8118299027,
      "portfolio": 706486.8118299027,
      "retirementReadyTarget": 0,
      "savings": 16659.667541776183,
      "shortfall": 0,
      "ssIncome": 37317.65529357866,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 1028722.3805396028,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 40778.00951598633,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 906404.3428327359,
      "portfolio": 906404.3428327359,
      "retirementReadyTarget": 1028722.3805396028,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 40778.00951598633,
      "taxes": 0,
      "withdrawals": 41148.89522158411,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1857987.0488484416,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 73649.62111427922,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 529635.0918008642,
      "portfolio": 529635.0918008642,
      "retirementReadyTarget": 1857987.0488484416,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 73649.62111427922,
      "taxes": 0,
      "withdrawals": 74319.48195393766,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 64,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 4: House Purchase 1`] = `
{
  "finalNetWorth": 1155305.7245853737,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3.959999999999127,
      "mortgageBalance": 0,
      "netWorth": 12496.04,
      "portfolio": 12496.04,
      "retirementReadyTarget": 0,
      "savings": 7496.040000000002,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "40": {
      "age": 40,
      "childCosts": 0,
      "coastFireNumber": 611083.2688943115,
      "cumulativeShortfall": 26006.801904690605,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 64923.16148780541,
      "fiNumber": 0,
      "hasHomeAccountingDebug": true,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 71947.2281094642,
      "homeValue": 309000,
      "income": 57963.75008596298,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 15653.96695909243,
      "mortgageBalance": 237052.7718905358,
      "netWorth": 45940.4262047736,
      "portfolio": 0,
      "retirementReadyTarget": 0,
      "savings": 0,
      "shortfall": 8344.796957218627,
      "ssIncome": 0,
      "taxes": 1561.8425540880005,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 75717.89165675471,
      "fiNumber": 1283584.9400145174,
      "hasHomeAccountingDebug": true,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 585707.655732279,
      "homeValue": 646977.3802631529,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 61269.724530873995,
      "netWorth": 919036.5425485792,
      "portfolio": 333328.8868163002,
      "retirementReadyTarget": 1283584.9400145174,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 88877.1761950681,
    },
    "70": {
      "age": 70,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 83015.75681471037,
      "fiNumber": 0,
      "hasHomeAccountingDebug": true,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 750024.1035976058,
      "homeValue": 750024.1035976058,
      "income": 67532.69890491663,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 943486.7710209317,
      "portfolio": 193462.66742332577,
      "retirementReadyTarget": 0,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 67532.69890491663,
      "taxes": 0,
      "withdrawals": 15483.057909793744,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 13207.390484892932,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 129335.84418177171,
      "fiNumber": 0,
      "hasHomeAccountingDebug": true,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 1168513.1150702666,
      "homeValue": 1168513.1150702666,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 1155305.7245853737,
      "portfolio": 0,
      "retirementReadyTarget": 0,
      "savings": 0,
      "shortfall": 13207.390484892932,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 10914.709247908473,
    },
  },
  "logsLength": 51,
  "moneyLasts": false,
  "retirementReadyAge": 66,
  "runOutAge": 85,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 5: Child Event 1`] = `
{
  "finalNetWorth": 780044.822926239,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3.959999999999127,
      "mortgageBalance": 0,
      "netWorth": 12496.04,
      "portfolio": 12496.04,
      "retirementReadyTarget": 0,
      "savings": 7496.040000000002,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "45": {
      "age": 45,
      "childCosts": 0,
      "coastFireNumber": 666516.6441578682,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 57121.82178764258,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 67195.87272386129,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 5.32190886220269,
      "mortgageBalance": 0,
      "netWorth": 131924.3809864414,
      "portfolio": 131924.3809864414,
      "retirementReadyTarget": 0,
      "savings": 10074.050936218715,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "53": {
      "age": 53,
      "childCosts": 0,
      "coastFireNumber": 1145199.6866199994,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 72360.21483494091,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 85121.72115931768,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 6.741634922520461,
      "mortgageBalance": 0,
      "netWorth": 310290.88360495225,
      "portfolio": 310290.88360495225,
      "retirementReadyTarget": 0,
      "savings": 12761.506324376767,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 745651.6240337911,
      "portfolio": 745651.6240337911,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1068883.9654811644,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 780044.822926239,
      "portfolio": 780044.822926239,
      "retirementReadyTarget": 1068883.9654811644,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42755.358619246574,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 63,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 6: Marriage and Spouse Income 1`] = `
{
  "finalNetWorth": 10332812.46815822,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3.959999999999127,
      "mortgageBalance": 0,
      "netWorth": 12496.04,
      "portfolio": 12496.04,
      "retirementReadyTarget": 0,
      "savings": 7496.040000000002,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "40": {
      "age": 40,
      "childCosts": 0,
      "coastFireNumber": 51666.40913608786,
      "cumulativeShortfall": 0,
      "debtBalance": 4695.060000915,
      "employerMatch": 0,
      "expenses": 5357.128879268631,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 107647.38622996298,
      "isCoastAchieved": true,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 187997.5512600004,
      "portfolio": 192692.61126091538,
      "retirementReadyTarget": 0,
      "savings": 16147.101135715024,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "62": {
      "age": 62,
      "childCosts": 0,
      "coastFireNumber": 173371.7865344862,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 7774.600371055775,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 111064.53913006814,
      "isCoastAchieved": true,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 4219700.299454923,
      "portfolio": 4219700.299454923,
      "retirementReadyTarget": 0,
      "savings": 31653.36832937476,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 15655.648758175626,
      "fiNumber": 391391.2189543907,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 4843793.191390534,
      "portfolio": 4843793.191390534,
      "retirementReadyTarget": 391391.2189543907,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 15655.648758175626,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 28275.843108179273,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 10332812.46815822,
      "portfolio": 10332812.46815822,
      "retirementReadyTarget": 0,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 0,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 41,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 7: Debts 1`] = `
{
  "finalNetWorth": 780044.822926239,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3.959999999999127,
      "mortgageBalance": 0,
      "netWorth": 12496.04,
      "portfolio": 12496.04,
      "retirementReadyTarget": 0,
      "savings": 7496.040000000002,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "40": {
      "age": 40,
      "childCosts": 0,
      "coastFireNumber": 475217.15568039403,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 49273.7852540472,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 57963.75008596298,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 4.590725334221133,
      "mortgageBalance": 0,
      "netWorth": 61589.802438531806,
      "portfolio": 61589.802438531806,
      "retirementReadyTarget": 0,
      "savings": 8689.964831915779,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "45": {
      "age": 45,
      "childCosts": 0,
      "coastFireNumber": 666516.6441578682,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 57121.82178764258,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 67195.87272386129,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 5.32190886220269,
      "mortgageBalance": 0,
      "netWorth": 131924.3809864414,
      "portfolio": 131924.3809864414,
      "retirementReadyTarget": 0,
      "savings": 10074.050936218715,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 745651.6240337911,
      "portfolio": 745651.6240337911,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1068883.9654811644,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 780044.822926239,
      "portfolio": 780044.822926239,
      "retirementReadyTarget": 1068883.9654811644,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42755.358619246574,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 63,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 8: No-Tax Mode 1`] = `
{
  "finalNetWorth": 780044.822926239,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3.959999999999127,
      "mortgageBalance": 0,
      "netWorth": 12496.04,
      "portfolio": 12496.04,
      "retirementReadyTarget": 0,
      "savings": 7496.040000000002,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 745651.6240337911,
      "portfolio": 745651.6240337911,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 86916.2532360885,
      "fiNumber": 627856.6774911447,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 703119.1422470943,
      "portfolio": 703119.1422470943,
      "retirementReadyTarget": 627856.6774911447,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 61801.986136442705,
      "taxes": 0,
      "withdrawals": 25114.26709964579,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1068883.9654811644,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 780044.822926239,
      "portfolio": 780044.822926239,
      "retirementReadyTarget": 1068883.9654811644,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42755.358619246574,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 63,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 8: Tax Mode 1`] = `
{
  "finalNetWorth": -134273.1640740881,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 365278.7039231755,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 45964.0048,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3463.9648000000016,
      "mortgageBalance": 0,
      "netWorth": 9036.0352,
      "portfolio": 9036.0352,
      "retirementReadyTarget": 0,
      "savings": 4036.0352000000007,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 3460.0048,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 458278.61859419115,
      "portfolio": 458278.61859419115,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 92389.28730533517,
      "fiNumber": 764682.5292223115,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 381062.5204698008,
      "portfolio": 381062.5204698008,
      "retirementReadyTarget": 764682.5292223115,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 61801.986136442705,
      "taxes": 5473.034069246674,
      "withdrawals": 27148.582476637028,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 134273.1640740881,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 151432.38882299548,
      "fiNumber": 1155466.1093506292,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": -134273.1640740881,
      "portfolio": 0,
      "retirementReadyTarget": 1155466.1093506292,
      "savings": 0,
      "shortfall": 46218.64437402518,
      "ssIncome": 105213.7444489703,
      "taxes": 3463.285754778606,
      "withdrawals": 0,
    },
  },
  "logsLength": 51,
  "moneyLasts": false,
  "retirementReadyAge": 66,
  "runOutAge": 83,
}
`;
